k8s/hash-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: hash-service
spec:
  selector:
    app: hash
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
