k8s/length-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: length-service
spec:
  selector:
    app: length
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
