k8s/otel-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: otel-collector
spec:
  selector:
    app: otel
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
